book: update nl
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/nl/v2/Aan-de-slag-Een-kort-historisch-overzicht-van-Git.html
+++ b/external/book/content/book/nl/v2/Aan-de-slag-Een-kort-historisch-overzicht-van-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Aan-de-slag-Over-versiebeheer
     next: book/nl/v2/Aan-de-slag-Wat-is-Git%3F
 title: Git - Een kort historisch overzicht van Git
+aliases:
+- "/book/nl/Aan-de-slag-Een-kleine-geschiedenis-van-Git.html"
+- "/book/nl/v1/Aan-de-slag-Een-kleine-geschiedenis-van-Git.html"
 ---
 <h2 id="_een_kort_historisch_overzicht_van_git">Een kort historisch overzicht van Git</h2>
 <div class="paragraph">
