--- a/external/book/content/book/nl/v2/Aan-de-slag-Git-installeren.html
+++ b/external/book/content/book/nl/v2/Aan-de-slag-Git-installeren.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Aan-de-slag-De-commando-regel
     next: book/nl/v2/Aan-de-slag-Git-klaarmaken-voor-eerste-gebruik
 title: Git - Git installeren
+aliases:
+- "/book/nl/Aan-de-slag-Git-installeren.html"
+- "/book/nl/v1/Aan-de-slag-Git-installeren.html"
 ---
 <h2 id="_git_installeren">Git installeren</h2>
 <div class="paragraph">
