--- a/external/book/content/book/nl/v2/Aan-de-slag-Hulp-krijgen.html
+++ b/external/book/content/book/nl/v2/Aan-de-slag-Hulp-krijgen.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Aan-de-slag-Git-klaarmaken-voor-eerste-gebruik
     next: book/nl/v2/Aan-de-slag-Samenvatting
 title: Git - Hulp krijgen
+aliases:
+- "/book/nl/Aan-de-slag-Hulp-krijgen.html"
+- "/book/nl/v1/Aan-de-slag-Hulp-krijgen.html"
 ---
 <h2 id="_git_help">Hulp krijgen</h2>
 <div class="paragraph">
