--- a/external/book/content/book/nl/v2/Aan-de-slag-Over-versiebeheer.html
+++ b/external/book/content/book/nl/v2/Aan-de-slag-Over-versiebeheer.html
@@ -16,6 +16,11 @@ book:
     previous: book/nl/v2/Aan-de-slag-Over-versiebeheer
     next: book/nl/v2/Aan-de-slag-Een-kort-historisch-overzicht-van-Git
 title: Git - Over versiebeheer
+aliases:
+- "/book/nl/Aan-de-slag.html"
+- "/book/nl/v1/Aan-de-slag.html"
+- "/book/nl/Aan-de-slag-Het-wat-en-waarom-van-versiebeheer.html"
+- "/book/nl/v1/Aan-de-slag-Het-wat-en-waarom-van-versiebeheer.html"
 ---
 <p>In dit hoofdstuk wordt uitgelegd hoe je aan de slag kunt gaan met Git.
 We zullen beginnen met wat achtergrondinformatie over versiebeheersystemen te geven, daarna een korte uitleg hoe je Git werkend kan krijgen op je computer en sluiten af met uit te leggen hoe je Git kan inrichten zodat je ermee aan het werk kunt.
