--- a/external/book/content/book/nl/v2/Aan-de-slag-Samenvatting.html
+++ b/external/book/content/book/nl/v2/Aan-de-slag-Samenvatting.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Aan-de-slag-Hulp-krijgen
     next: book/nl/v2/Git-Basics-Een-Git-repository-verkrijgen
 title: Git - Samenvatting
+aliases:
+- "/book/nl/Aan-de-slag-Samenvatting.html"
+- "/book/nl/v1/Aan-de-slag-Samenvatting.html"
 ---
 <h2 id="_samenvatting">Samenvatting</h2>
 <div class="paragraph">
