--- a/external/book/content/book/nl/v2/Aan-de-slag-Wat-is-Git?.html
+++ b/external/book/content/book/nl/v2/Aan-de-slag-Wat-is-Git?.html
@@ -19,6 +19,8 @@ title: Git - Wat is Git?
 url: "/book/nl/v2/Aan-de-slag-Wat-is-Git?.html"
 aliases:
 - "/book/nl/v2/Aan-de-slag-Wat-is-Git.html"
+- "/book/nl/Aan-de-slag-De-basis-van-Git.html"
+- "/book/nl/v1/Aan-de-slag-De-basis-van-Git.html"
 ---
 <h2 id="_wat_is_git">Wat is Git?</h2>
 <div class="paragraph">
