--- a/external/book/content/book/nl/v2/Branchen-in-Git-Branch-beheer.html
+++ b/external/book/content/book/nl/v2/Branchen-in-Git-Branch-beheer.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Branchen-in-Git-Eenvoudig-branchen-en-mergen
     next: book/nl/v2/Branchen-in-Git-Branch-workflows
 title: Git - Branch-beheer
+aliases:
+- "/book/nl/Branchen-in-Git-Branch-beheer.html"
+- "/book/nl/v1/Branchen-in-Git-Branch-beheer.html"
 ---
 <h2 id="_branch_management">Branch-beheer</h2>
 <div class="paragraph">
