--- a/external/book/content/book/nl/v2/Branchen-in-Git-Branch-workflows.html
+++ b/external/book/content/book/nl/v2/Branchen-in-Git-Branch-workflows.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Branchen-in-Git-Branch-beheer
     next: book/nl/v2/Branchen-in-Git-Branches-op-afstand-Remote-branches
 title: Git - Branch workflows
+aliases:
+- "/book/nl/Branchen-in-Git-Branch-werkwijzen.html"
+- "/book/nl/v1/Branchen-in-Git-Branch-werkwijzen.html"
 ---
 <h2 id="_branch_workflows">Branch workflows</h2>
 <div class="paragraph">
