--- a/external/book/content/book/nl/v2/Branchen-in-Git-Branches-in-vogelvlucht.html
+++ b/external/book/content/book/nl/v2/Branchen-in-Git-Branches-in-vogelvlucht.html
@@ -16,6 +16,11 @@ book:
     previous: book/nl/v2/Git-Basics-Samenvatting
     next: book/nl/v2/Branchen-in-Git-Eenvoudig-branchen-en-mergen
 title: Git - Branches in vogelvlucht
+aliases:
+- "/book/nl/Branchen-in-Git.html"
+- "/book/nl/v1/Branchen-in-Git.html"
+- "/book/nl/Branchen-in-Git-Wat-een-branch-is.html"
+- "/book/nl/v1/Branchen-in-Git-Wat-een-branch-is.html"
 ---
 <p>
 Bijna elk VCS ondersteunt een bepaalde vorm van branchen.
