--- a/external/book/content/book/nl/v2/Branchen-in-Git-Branches-op-afstand-Remote-branches.html
+++ b/external/book/content/book/nl/v2/Branchen-in-Git-Branches-op-afstand-Remote-branches.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Branchen-in-Git-Branch-workflows
     next: book/nl/v2/Branchen-in-Git-Rebasen
 title: Git - Branches op afstand (Remote branches)
+aliases:
+- "/book/nl/Branchen-in-Git-Remote-branches.html"
+- "/book/nl/v1/Branchen-in-Git-Remote-branches.html"
 ---
 <h2 id="_remote_branches">Branches op afstand (Remote branches)</h2>
 <div class="paragraph">
