--- a/external/book/content/book/nl/v2/Branchen-in-Git-Eenvoudig-branchen-en-mergen.html
+++ b/external/book/content/book/nl/v2/Branchen-in-Git-Eenvoudig-branchen-en-mergen.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Branchen-in-Git-Branches-in-vogelvlucht
     next: book/nl/v2/Branchen-in-Git-Branch-beheer
 title: Git - Eenvoudig branchen en mergen
+aliases:
+- "/book/nl/Branchen-in-Git-Eenvoudig-branchen-en-mergen.html"
+- "/book/nl/v1/Branchen-in-Git-Eenvoudig-branchen-en-mergen.html"
 ---
 <h2 id="_eenvoudig_branchen_en_mergen">Eenvoudig branchen en mergen</h2>
 <div class="paragraph">
