--- a/external/book/content/book/nl/v2/Branchen-in-Git-Rebasen.html
+++ b/external/book/content/book/nl/v2/Branchen-in-Git-Rebasen.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Branchen-in-Git-Branches-op-afstand-Remote-branches
     next: book/nl/v2/Branchen-in-Git-Samenvatting
 title: Git - Rebasen
+aliases:
+- "/book/nl/Branchen-in-Git-Rebasen.html"
+- "/book/nl/v1/Branchen-in-Git-Rebasen.html"
 ---
 <h2 id="_rebasing">Rebasen</h2>
 <div class="paragraph">
