--- a/external/book/content/book/nl/v2/Branchen-in-Git-Samenvatting.html
+++ b/external/book/content/book/nl/v2/Branchen-in-Git-Samenvatting.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Branchen-in-Git-Rebasen
     next: book/nl/v2/Git-op-de-server-De-protocollen
 title: Git - Samenvatting
+aliases:
+- "/book/nl/Branchen-in-Git-Samenvatting.html"
+- "/book/nl/v1/Branchen-in-Git-Samenvatting.html"
 ---
 <h2 id="_samenvatting_3">Samenvatting</h2>
 <div class="paragraph">
