--- a/external/book/content/book/nl/v2/Gedistribueerd-Git-Bijdragen-aan-een-project.html
+++ b/external/book/content/book/nl/v2/Gedistribueerd-Git-Bijdragen-aan-een-project.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Gedistribueerd-Git-Gedistribueerde-workflows
     next: book/nl/v2/Gedistribueerd-Git-Het-beheren-van-een-project
 title: Git - Bijdragen aan een project
+aliases:
+- "/book/nl/Gedistribueerd-Git-Bijdragen-aan-een-project.html"
+- "/book/nl/v1/Gedistribueerd-Git-Bijdragen-aan-een-project.html"
 ---
 <h2 id="_contributing_project">Bijdragen aan een project</h2>
 <div class="paragraph">
