--- a/external/book/content/book/nl/v2/Gedistribueerd-Git-Gedistribueerde-workflows.html
+++ b/external/book/content/book/nl/v2/Gedistribueerd-Git-Gedistribueerde-workflows.html
@@ -16,6 +16,11 @@ book:
     previous: book/nl/v2/Git-op-de-server-Samenvatting
     next: book/nl/v2/Gedistribueerd-Git-Bijdragen-aan-een-project
 title: Git - Gedistribueerde workflows
+aliases:
+- "/book/nl/Gedistribueerd-Git.html"
+- "/book/nl/v1/Gedistribueerd-Git.html"
+- "/book/nl/Gedistribueerd-Git-Gedistribueerde-werkwijzen.html"
+- "/book/nl/v1/Gedistribueerd-Git-Gedistribueerde-werkwijzen.html"
 ---
 <p>
 Nu je een remote Git repository hebt ingesteld als een plaats waar alle ontwikkelaars hun code kunnen delen, en je bekend bent met fundamentele Git commando’s in een lokale workflow, zul je hier zien hoe je enkele van de gedistribueerde workflows kunt gebruiken waar Git je toe in staat stelt.</p><p>In dit hoofdstuk zul je zien hoe je met Git kunt werken in een gedistribueerde omgeving als een bijdrager (contributor) en als een integrator.
