--- a/external/book/content/book/nl/v2/Gedistribueerd-Git-Het-beheren-van-een-project.html
+++ b/external/book/content/book/nl/v2/Gedistribueerd-Git-Het-beheren-van-een-project.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Gedistribueerd-Git-Bijdragen-aan-een-project
     next: book/nl/v2/Gedistribueerd-Git-Samenvatting
 title: Git - Het beheren van een project
+aliases:
+- "/book/nl/Gedistribueerd-Git-Projectonderhoud.html"
+- "/book/nl/v1/Gedistribueerd-Git-Projectonderhoud.html"
 ---
 <h2 id="_het_beheren_van_een_project">Het beheren van een project</h2>
 <div class="paragraph">
