--- a/external/book/content/book/nl/v2/Gedistribueerd-Git-Samenvatting.html
+++ b/external/book/content/book/nl/v2/Gedistribueerd-Git-Samenvatting.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Gedistribueerd-Git-Het-beheren-van-een-project
     next: book/nl/v2/GitHub-Account-setup-en-configuratie
 title: Git - Samenvatting
+aliases:
+- "/book/nl/Gedistribueerd-Git-Samenvatting.html"
+- "/book/nl/v1/Gedistribueerd-Git-Samenvatting.html"
 ---
 <h2 id="_samenvatting_6">Samenvatting</h2>
 <div class="paragraph">
