--- a/external/book/content/book/nl/v2/Git-Basics-De-commit-geschiedenis-bekijken.html
+++ b/external/book/content/book/nl/v2/Git-Basics-De-commit-geschiedenis-bekijken.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-Basics-Wijzigingen-aan-de-repository-vastleggen
     next: book/nl/v2/Git-Basics-Dingen-ongedaan-maken
 title: Git - De commit geschiedenis bekijken
+aliases:
+- "/book/nl/De-basis-van-Git-De-commit-geschiedenis-bekijken.html"
+- "/book/nl/v1/De-basis-van-Git-De-commit-geschiedenis-bekijken.html"
 ---
 <h2 id="_viewing_history">De commit geschiedenis bekijken</h2>
 <div class="paragraph">
