--- a/external/book/content/book/nl/v2/Git-Basics-Dingen-ongedaan-maken.html
+++ b/external/book/content/book/nl/v2/Git-Basics-Dingen-ongedaan-maken.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-Basics-De-commit-geschiedenis-bekijken
     next: book/nl/v2/Git-Basics-Werken-met-remotes
 title: Git - Dingen ongedaan maken
+aliases:
+- "/book/nl/De-basis-van-Git-Dingen-ongedaan-maken.html"
+- "/book/nl/v1/De-basis-van-Git-Dingen-ongedaan-maken.html"
 ---
 <h2 id="_undoing">Dingen ongedaan maken</h2>
 <div class="paragraph">
