--- a/external/book/content/book/nl/v2/Git-Basics-Een-Git-repository-verkrijgen.html
+++ b/external/book/content/book/nl/v2/Git-Basics-Een-Git-repository-verkrijgen.html
@@ -16,6 +16,11 @@ book:
     previous: book/nl/v2/Aan-de-slag-Samenvatting
     next: book/nl/v2/Git-Basics-Wijzigingen-aan-de-repository-vastleggen
 title: Git - Een Git repository verkrijgen
+aliases:
+- "/book/nl/De-basis-van-Git.html"
+- "/book/nl/v1/De-basis-van-Git.html"
+- "/book/nl/De-basis-van-Git-Een-Git-repository-verkrijgen.html"
+- "/book/nl/v1/De-basis-van-Git-Een-Git-repository-verkrijgen.html"
 ---
 <p>Als je slechts één hoofdstuk kunt lezen om met Git aan de slag te gaan, dan is deze het.
 In dit hoofdstuk worden alle basiscommando’s behandeld die je nodig hebt om het leeuwendeel van de dingen te doen waarmee je uiteindelijk je tijd met Git zult doorbrengen.
