--- a/external/book/content/book/nl/v2/Git-Basics-Git-aliassen.html
+++ b/external/book/content/book/nl/v2/Git-Basics-Git-aliassen.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-Basics-Taggen-Labelen
     next: book/nl/v2/Git-Basics-Samenvatting
 title: Git - Git aliassen
+aliases:
+- "/book/nl/De-basis-van-Git-Tips-en-trucs.html"
+- "/book/nl/v1/De-basis-van-Git-Tips-en-trucs.html"
 ---
 <h2 id="_git_aliases">Git aliassen</h2>
 <div class="paragraph">
