--- a/external/book/content/book/nl/v2/Git-Basics-Samenvatting.html
+++ b/external/book/content/book/nl/v2/Git-Basics-Samenvatting.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-Basics-Git-aliassen
     next: book/nl/v2/Branchen-in-Git-Branches-in-vogelvlucht
 title: Git - Samenvatting
+aliases:
+- "/book/nl/De-basis-van-Git-Samenvatting.html"
+- "/book/nl/v1/De-basis-van-Git-Samenvatting.html"
 ---
 <h2 id="_samenvatting_2">Samenvatting</h2>
 <div class="paragraph">
