--- a/external/book/content/book/nl/v2/Git-Basics-Taggen-Labelen.html
+++ b/external/book/content/book/nl/v2/Git-Basics-Taggen-Labelen.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-Basics-Werken-met-remotes
     next: book/nl/v2/Git-Basics-Git-aliassen
 title: Git - Taggen (Labelen)
+aliases:
+- "/book/nl/De-basis-van-Git-Labelen.html"
+- "/book/nl/v1/De-basis-van-Git-Labelen.html"
 ---
 <h2 id="_git_tagging">Taggen (Labelen)</h2>
 <div class="paragraph">
