--- a/external/book/content/book/nl/v2/Git-Basics-Werken-met-remotes.html
+++ b/external/book/content/book/nl/v2/Git-Basics-Werken-met-remotes.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-Basics-Dingen-ongedaan-maken
     next: book/nl/v2/Git-Basics-Taggen-Labelen
 title: Git - Werken met remotes
+aliases:
+- "/book/nl/De-basis-van-Git-Werken-met-remotes.html"
+- "/book/nl/v1/De-basis-van-Git-Werken-met-remotes.html"
 ---
 <h2 id="_remote_repos">Werken met remotes</h2>
 <div class="paragraph">
