--- a/external/book/content/book/nl/v2/Git-Basics-Wijzigingen-aan-de-repository-vastleggen.html
+++ b/external/book/content/book/nl/v2/Git-Basics-Wijzigingen-aan-de-repository-vastleggen.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-Basics-Een-Git-repository-verkrijgen
     next: book/nl/v2/Git-Basics-De-commit-geschiedenis-bekijken
 title: Git - Wijzigingen aan de repository vastleggen
+aliases:
+- "/book/nl/De-basis-van-Git-Wijzigingen-aan-het-repository-vastleggen.html"
+- "/book/nl/v1/De-basis-van-Git-Wijzigingen-aan-het-repository-vastleggen.html"
 ---
 <h2 id="_wijzigingen_aan_de_repository_vastleggen">Wijzigingen aan de repository vastleggen</h2>
 <div class="paragraph">
