--- a/external/book/content/book/nl/v2/Git-Binnenwerk-Binnenwerk-en-koetswerk-plumbing-and-porcelain.html
+++ b/external/book/content/book/nl/v2/Git-Binnenwerk-Binnenwerk-en-koetswerk-plumbing-and-porcelain.html
@@ -16,6 +16,11 @@ book:
     previous: book/nl/v2/Git-en-andere-systemen-Samenvatting
     next: book/nl/v2/Git-Binnenwerk-Git-objecten
 title: Git - Binnenwerk en koetswerk (plumbing and porcelain)
+aliases:
+- "/book/nl/Het-binnenwerk-van-Git.html"
+- "/book/nl/v1/Het-binnenwerk-van-Git.html"
+- "/book/nl/Het-binnenwerk-van-Git-Sanitaire-inrichtingen-en-porselein.html"
+- "/book/nl/v1/Het-binnenwerk-van-Git-Sanitaire-inrichtingen-en-porselein.html"
 ---
 <p>Je bent misschien meteen doorgegaan naar dit hoofdstuk vanuit een eerder hoofdstuk, of je bent misschien hier beland nadat je de rest van het boek gelezen hebt - hoe dan ook, dit is waar we werking onder de motorkap en de implemantatie van Git gaan behandelen.
 We zijn van mening dat het leren van deze informatie fundamenteel belangrijk was om te begrijpen hoe nuttig en krachtig Git is, maar anderen hebben ons duidelijk gemaakt dat het juist verwarrend kan zijn en onnodig complex voor beginners.
