--- a/external/book/content/book/nl/v2/Git-Binnenwerk-De-Refspec.html
+++ b/external/book/content/book/nl/v2/Git-Binnenwerk-De-Refspec.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-Binnenwerk-Packfiles
     next: book/nl/v2/Git-Binnenwerk-Uitwisseling-protocollen
 title: Git - De Refspec
+aliases:
+- "/book/nl/Het-binnenwerk-van-Git-De-refspec.html"
+- "/book/nl/v1/Het-binnenwerk-van-Git-De-refspec.html"
 ---
 <h2 id="_refspec">De Refspec</h2>
 <div class="paragraph">
