--- a/external/book/content/book/nl/v2/Git-Binnenwerk-Git-Referenties.html
+++ b/external/book/content/book/nl/v2/Git-Binnenwerk-Git-Referenties.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-Binnenwerk-Git-objecten
     next: book/nl/v2/Git-Binnenwerk-Packfiles
 title: Git - Git Referenties
+aliases:
+- "/book/nl/Het-binnenwerk-van-Git-Git-referenties.html"
+- "/book/nl/v1/Het-binnenwerk-van-Git-Git-referenties.html"
 ---
 <h2 id="_git_refs">Git Referenties</h2>
 <div class="paragraph">
