--- a/external/book/content/book/nl/v2/Git-Binnenwerk-Git-objecten.html
+++ b/external/book/content/book/nl/v2/Git-Binnenwerk-Git-objecten.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-Binnenwerk-Binnenwerk-en-koetswerk-plumbing-and-porcelain
     next: book/nl/v2/Git-Binnenwerk-Git-Referenties
 title: Git - Git objecten
+aliases:
+- "/book/nl/Het-binnenwerk-van-Git-Git-objecten.html"
+- "/book/nl/v1/Het-binnenwerk-van-Git-Git-objecten.html"
 ---
 <h2 id="_objects">Git objecten</h2>
 <div class="paragraph">
