--- a/external/book/content/book/nl/v2/Git-Binnenwerk-Onderhoud-en-gegevensherstel.html
+++ b/external/book/content/book/nl/v2/Git-Binnenwerk-Onderhoud-en-gegevensherstel.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-Binnenwerk-Uitwisseling-protocollen
     next: book/nl/v2/Git-Binnenwerk-Omgevingsvariabelen
 title: Git - Onderhoud en gegevensherstel
+aliases:
+- "/book/nl/Het-binnenwerk-van-Git-Onderhoud-en-het-herstellen-van-gegevens.html"
+- "/book/nl/v1/Het-binnenwerk-van-Git-Onderhoud-en-het-herstellen-van-gegevens.html"
 ---
 <h2 id="_onderhoud_en_gegevensherstel">Onderhoud en gegevensherstel</h2>
 <div class="paragraph">
