--- a/external/book/content/book/nl/v2/Git-Binnenwerk-Packfiles.html
+++ b/external/book/content/book/nl/v2/Git-Binnenwerk-Packfiles.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-Binnenwerk-Git-Referenties
     next: book/nl/v2/Git-Binnenwerk-De-Refspec
 title: Git - Packfiles
+aliases:
+- "/book/nl/Het-binnenwerk-van-Git-Packfiles.html"
+- "/book/nl/v1/Het-binnenwerk-van-Git-Packfiles.html"
 ---
 <h2 id="_packfiles">Packfiles</h2>
 <div class="paragraph">
