--- a/external/book/content/book/nl/v2/Git-Binnenwerk-Samenvatting.html
+++ b/external/book/content/book/nl/v2/Git-Binnenwerk-Samenvatting.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-Binnenwerk-Omgevingsvariabelen
     next: book/nl/v2/Bijlage-A:-Git-in-andere-omgevingen-Grafische-interfaces
 title: Git - Samenvatting
+aliases:
+- "/book/nl/Het-binnenwerk-van-Git-Samenvatting.html"
+- "/book/nl/v1/Het-binnenwerk-van-Git-Samenvatting.html"
 ---
 <h2 id="_samenvatting_12">Samenvatting</h2>
 <div class="paragraph">
