--- a/external/book/content/book/nl/v2/Git-Binnenwerk-Uitwisseling-protocollen.html
+++ b/external/book/content/book/nl/v2/Git-Binnenwerk-Uitwisseling-protocollen.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-Binnenwerk-De-Refspec
     next: book/nl/v2/Git-Binnenwerk-Onderhoud-en-gegevensherstel
 title: Git - Uitwisseling protocollen
+aliases:
+- "/book/nl/Het-binnenwerk-van-Git-Overdracht-protocollen.html"
+- "/book/nl/v1/Het-binnenwerk-van-Git-Overdracht-protocollen.html"
 ---
 <h2 id="_uitwisseling_protocollen">Uitwisseling protocollen</h2>
 <div class="paragraph">
