--- a/external/book/content/book/nl/v2/Git-Tools-Debuggen-met-Git.html
+++ b/external/book/content/book/nl/v2/Git-Tools-Debuggen-met-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-Tools-Rerere
     next: book/nl/v2/Git-Tools-Submodules
 title: Git - Debuggen met Git
+aliases:
+- "/book/nl/Git-tools-Debuggen-met-Git.html"
+- "/book/nl/v1/Git-tools-Debuggen-met-Git.html"
 ---
 <h2 id="_debuggen_met_git">Debuggen met Git</h2>
 <div class="paragraph">
