--- a/external/book/content/book/nl/v2/Git-Tools-Geschiedenis-herschrijven.html
+++ b/external/book/content/book/nl/v2/Git-Tools-Geschiedenis-herschrijven.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-Tools-Zoeken
     next: book/nl/v2/Git-Tools-Reset-ontrafeld
 title: Git - Geschiedenis herschrijven
+aliases:
+- "/book/nl/Git-tools-Geschiedenis-herschrijven.html"
+- "/book/nl/v1/Git-tools-Geschiedenis-herschrijven.html"
 ---
 <h2 id="_rewriting_history">Geschiedenis herschrijven</h2>
 <div class="paragraph">
