--- a/external/book/content/book/nl/v2/Git-Tools-Interactief-stagen.html
+++ b/external/book/content/book/nl/v2/Git-Tools-Interactief-stagen.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-Tools-Revisie-Selectie
     next: book/nl/v2/Git-Tools-Stashen-en-opschonen
 title: Git - Interactief stagen
+aliases:
+- "/book/nl/Git-tools-Interactief-stagen.html"
+- "/book/nl/v1/Git-tools-Interactief-stagen.html"
 ---
 <h2 id="_interactive_staging">Interactief stagen</h2>
 <div class="paragraph">
