--- a/external/book/content/book/nl/v2/Git-Tools-Mergen-voor-gevorderden.html
+++ b/external/book/content/book/nl/v2/Git-Tools-Mergen-voor-gevorderden.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-Tools-Reset-ontrafeld
     next: book/nl/v2/Git-Tools-Rerere
 title: Git - Mergen voor gevorderden
+aliases:
+- "/book/nl/Git-tools-Subboom-mergen.html"
+- "/book/nl/v1/Git-tools-Subboom-mergen.html"
 ---
 <h2 id="_advanced_merging">Mergen voor gevorderden</h2>
 <div class="paragraph">
