--- a/external/book/content/book/nl/v2/Git-Tools-Revisie-Selectie.html
+++ b/external/book/content/book/nl/v2/Git-Tools-Revisie-Selectie.html
@@ -16,6 +16,11 @@ book:
     previous: book/nl/v2/GitHub-Samenvatting
     next: book/nl/v2/Git-Tools-Interactief-stagen
 title: Git - Revisie Selectie
+aliases:
+- "/book/nl/Git-tools.html"
+- "/book/nl/v1/Git-tools.html"
+- "/book/nl/Git-tools-Revisie-selectie.html"
+- "/book/nl/v1/Git-tools-Revisie-selectie.html"
 ---
 <p>Op dit moment heb je de meeste van de alledaagse commando’s en workflows geleerd die je nodig hebt om een Git repository te onderhouden of te beheren voor het bijhouden van je eigen bron code.
 Je hebt de basale taken van tracken en committen van bestanden volbracht, en je hebt de kracht van de staging area onder de knie gekregen en het lichtgewicht topic branchen en mergen.</p><p>Nu zal je een aantal erg krachtige dingen die Git kan doen onderzoeken die je niet perse elke dag zult doen maar die je op een gegeven moment wel nodig kunt hebben.</p>
