--- a/external/book/content/book/nl/v2/Git-Tools-Samenvatting.html
+++ b/external/book/content/book/nl/v2/Git-Tools-Samenvatting.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-Tools-Het-opslaan-van-inloggegevens
     next: book/nl/v2/Git-aanpassen-Git-configuratie
 title: Git - Samenvatting
+aliases:
+- "/book/nl/Git-tools-Samenvatting.html"
+- "/book/nl/v1/Git-tools-Samenvatting.html"
 ---
 <h2 id="_samenvatting_9">Samenvatting</h2>
 <div class="paragraph">
