--- a/external/book/content/book/nl/v2/Git-Tools-Stashen-en-opschonen.html
+++ b/external/book/content/book/nl/v2/Git-Tools-Stashen-en-opschonen.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-Tools-Interactief-stagen
     next: book/nl/v2/Git-Tools-Je-werk-tekenen
 title: Git - Stashen en opschonen
+aliases:
+- "/book/nl/Git-tools-Stashen.html"
+- "/book/nl/v1/Git-tools-Stashen.html"
 ---
 <h2 id="_git_stashing">Stashen en opschonen</h2>
 <div class="paragraph">
