--- a/external/book/content/book/nl/v2/Git-Tools-Submodules.html
+++ b/external/book/content/book/nl/v2/Git-Tools-Submodules.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-Tools-Debuggen-met-Git
     next: book/nl/v2/Git-Tools-Bundelen
 title: Git - Submodules
+aliases:
+- "/book/nl/Git-tools-Submodules.html"
+- "/book/nl/v1/Git-tools-Submodules.html"
 ---
 <h2 id="_git_submodules">Submodules</h2>
 <div class="paragraph">
