--- a/external/book/content/book/nl/v2/Git-aanpassen-Een-voorbeeld-van-Git-afgedwongen-beleid.html
+++ b/external/book/content/book/nl/v2/Git-aanpassen-Een-voorbeeld-van-Git-afgedwongen-beleid.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-aanpassen-Git-Hooks
     next: book/nl/v2/Git-aanpassen-Samenvatting
 title: Git - Een voorbeeld van Git-afgedwongen beleid
+aliases:
+- "/book/nl/Git-op-maat-maken-Een-voorbeeld-van-Git-afgedwongen-beleid.html"
+- "/book/nl/v1/Git-op-maat-maken-Een-voorbeeld-van-Git-afgedwongen-beleid.html"
 ---
 <h2 id="_an_example_git_enforced_policy">Een voorbeeld van Git-afgedwongen beleid</h2>
 <div class="paragraph">
