--- a/external/book/content/book/nl/v2/Git-aanpassen-Git-Hooks.html
+++ b/external/book/content/book/nl/v2/Git-aanpassen-Git-Hooks.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-aanpassen-Git-attributen
     next: book/nl/v2/Git-aanpassen-Een-voorbeeld-van-Git-afgedwongen-beleid
 title: Git - Git Hooks
+aliases:
+- "/book/nl/Git-op-maat-maken-Git-haken.html"
+- "/book/nl/v1/Git-op-maat-maken-Git-haken.html"
 ---
 <h2 id="_git_hooks">Git Hooks</h2>
 <div class="paragraph">
