--- a/external/book/content/book/nl/v2/Git-aanpassen-Git-attributen.html
+++ b/external/book/content/book/nl/v2/Git-aanpassen-Git-attributen.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-aanpassen-Git-configuratie
     next: book/nl/v2/Git-aanpassen-Git-Hooks
 title: Git - Git attributen
+aliases:
+- "/book/nl/Git-op-maat-maken-Git-attributen.html"
+- "/book/nl/v1/Git-op-maat-maken-Git-attributen.html"
 ---
 <h2 id="_git_attributen">Git attributen</h2>
 <div class="paragraph">
