--- a/external/book/content/book/nl/v2/Git-aanpassen-Git-configuratie.html
+++ b/external/book/content/book/nl/v2/Git-aanpassen-Git-configuratie.html
@@ -16,6 +16,11 @@ book:
     previous: book/nl/v2/Git-Tools-Samenvatting
     next: book/nl/v2/Git-aanpassen-Git-attributen
 title: Git - Git configuratie
+aliases:
+- "/book/nl/Git-op-maat-maken.html"
+- "/book/nl/v1/Git-op-maat-maken.html"
+- "/book/nl/Git-op-maat-maken-Git-configuratie.html"
+- "/book/nl/v1/Git-op-maat-maken-Git-configuratie.html"
 ---
 <p>Tot dusver hebben we de grondbeginselen behandeld van de werking van Git en hoe het te gebruiken, en we hebben een aantal instrumenten de revue laten passeren die Git je biedt om het eenvoudig en effectief te gebruiken.
 In dit hoofdstuk zullen we laten zien hoe je Git op een meer aangepaste manier kan laten werken, door een aantal belangrijke configuratie instellingen te laten zien en het hooks systeem.
