--- a/external/book/content/book/nl/v2/Git-aanpassen-Samenvatting.html
+++ b/external/book/content/book/nl/v2/Git-aanpassen-Samenvatting.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-aanpassen-Een-voorbeeld-van-Git-afgedwongen-beleid
     next: book/nl/v2/Git-en-andere-systemen-Git-als-een-client
 title: Git - Samenvatting
+aliases:
+- "/book/nl/Git-op-maat-maken-Samenvatting.html"
+- "/book/nl/v1/Git-op-maat-maken-Samenvatting.html"
 ---
 <h2 id="_samenvatting_10">Samenvatting</h2>
 <div class="paragraph">
