--- a/external/book/content/book/nl/v2/Git-en-andere-systemen-Git-als-een-client.html
+++ b/external/book/content/book/nl/v2/Git-en-andere-systemen-Git-als-een-client.html
@@ -16,6 +16,11 @@ book:
     previous: book/nl/v2/Git-aanpassen-Samenvatting
     next: book/nl/v2/Git-en-andere-systemen-Migreren-naar-Git
 title: Git - Git als een client
+aliases:
+- "/book/nl/Git-en-andere-systemen.html"
+- "/book/nl/v1/Git-en-andere-systemen.html"
+- "/book/nl/Git-en-andere-systemen-Git-en-Subversion.html"
+- "/book/nl/v1/Git-en-andere-systemen-Git-en-Subversion.html"
 ---
 <p>Het is geen perfecte wereld.
 Meestal kan je niet meteen elk project waar je mee in aanraking komt omzetten naar Git.
