--- a/external/book/content/book/nl/v2/Git-en-andere-systemen-Migreren-naar-Git.html
+++ b/external/book/content/book/nl/v2/Git-en-andere-systemen-Migreren-naar-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-en-andere-systemen-Git-als-een-client
     next: book/nl/v2/Git-en-andere-systemen-Samenvatting
 title: Git - Migreren naar Git
+aliases:
+- "/book/nl/Git-en-andere-systemen-Naar-Git-migreren.html"
+- "/book/nl/v1/Git-en-andere-systemen-Naar-Git-migreren.html"
 ---
 <h2 id="_migrating">Migreren naar Git</h2>
 <div class="paragraph">
