--- a/external/book/content/book/nl/v2/Git-en-andere-systemen-Samenvatting.html
+++ b/external/book/content/book/nl/v2/Git-en-andere-systemen-Samenvatting.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-en-andere-systemen-Migreren-naar-Git
     next: book/nl/v2/Git-Binnenwerk-Binnenwerk-en-koetswerk-plumbing-and-porcelain
 title: Git - Samenvatting
+aliases:
+- "/book/nl/Git-en-andere-systemen-Samenvatting.html"
+- "/book/nl/v1/Git-en-andere-systemen-Samenvatting.html"
 ---
 <h2 id="_samenvatting_11">Samenvatting</h2>
 <div class="paragraph">
