--- a/external/book/content/book/nl/v2/Git-op-de-server-De-protocollen.html
+++ b/external/book/content/book/nl/v2/Git-op-de-server-De-protocollen.html
@@ -16,6 +16,11 @@ book:
     previous: book/nl/v2/Branchen-in-Git-Samenvatting
     next: book/nl/v2/Git-op-de-server-Git-op-een-server-krijgen
 title: Git - De protocollen
+aliases:
+- "/book/nl/Git-op-de-server.html"
+- "/book/nl/v1/Git-op-de-server.html"
+- "/book/nl/Git-op-de-server-De-protocollen.html"
+- "/book/nl/v1/Git-op-de-server-De-protocollen.html"
 ---
 <p>
 Je zou nu de alledaagse taken waarvoor je Git zult gebruiken moeten kunnen uitvoeren.
