--- a/external/book/content/book/nl/v2/Git-op-de-server-De-server-opzetten.html
+++ b/external/book/content/book/nl/v2/Git-op-de-server-De-server-opzetten.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-op-de-server-Je-publieke-SSH-sleutel-genereren
     next: book/nl/v2/Git-op-de-server-Git-Daemon
 title: Git - De server opzetten
+aliases:
+- "/book/nl/Git-op-de-server-De-Server-Opzetten.html"
+- "/book/nl/v1/Git-op-de-server-De-Server-Opzetten.html"
 ---
 <h2 id="_setting_up_server">De server opzetten</h2>
 <div class="paragraph">
