--- a/external/book/content/book/nl/v2/Git-op-de-server-Git-Daemon.html
+++ b/external/book/content/book/nl/v2/Git-op-de-server-Git-Daemon.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-op-de-server-De-server-opzetten
     next: book/nl/v2/Git-op-de-server-Slimme-HTTP
 title: Git - Git Daemon
+aliases:
+- "/book/nl/Git-op-de-server-Git-daemon.html"
+- "/book/nl/v1/Git-op-de-server-Git-daemon.html"
 ---
 <h2 id="_git_daemon">Git Daemon</h2>
 <div class="paragraph">
