--- a/external/book/content/book/nl/v2/Git-op-de-server-Git-op-een-server-krijgen.html
+++ b/external/book/content/book/nl/v2/Git-op-de-server-Git-op-een-server-krijgen.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-op-de-server-De-protocollen
     next: book/nl/v2/Git-op-de-server-Je-publieke-SSH-sleutel-genereren
 title: Git - Git op een server krijgen
+aliases:
+- "/book/nl/Git-op-de-server-Git-op-een-server-krijgen.html"
+- "/book/nl/v1/Git-op-de-server-Git-op-een-server-krijgen.html"
 ---
 <h2 id="_getting_git_on_a_server">Git op een server krijgen</h2>
 <div class="paragraph">
