--- a/external/book/content/book/nl/v2/Git-op-de-server-Hosting-oplossingen-van-derden.html
+++ b/external/book/content/book/nl/v2/Git-op-de-server-Hosting-oplossingen-van-derden.html
@@ -16,6 +16,17 @@ book:
     previous: book/nl/v2/Git-op-de-server-GitLab
     next: book/nl/v2/Git-op-de-server-Samenvatting
 title: Git - Hosting oplossingen van derden
+aliases:
+- "/book/nl/Git-op-de-server-Publieke-toegang.html"
+- "/book/nl/v1/Git-op-de-server-Publieke-toegang.html"
+- "/book/nl/Git-op-de-server-GitWeb.html"
+- "/book/nl/v1/Git-op-de-server-GitWeb.html"
+- "/book/nl/Git-op-de-server-Gitosis.html"
+- "/book/nl/v1/Git-op-de-server-Gitosis.html"
+- "/book/nl/Git-op-de-server-Gitolite.html"
+- "/book/nl/v1/Git-op-de-server-Gitolite.html"
+- "/book/nl/Git-op-de-server-Hosted-Git.html"
+- "/book/nl/v1/Git-op-de-server-Hosted-Git.html"
 ---
 <h2 id="_hosting_oplossingen_van_derden">Hosting oplossingen van derden</h2>
 <div class="paragraph">
