--- a/external/book/content/book/nl/v2/Git-op-de-server-Samenvatting.html
+++ b/external/book/content/book/nl/v2/Git-op-de-server-Samenvatting.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-op-de-server-Hosting-oplossingen-van-derden
     next: book/nl/v2/Gedistribueerd-Git-Gedistribueerde-workflows
 title: Git - Samenvatting
+aliases:
+- "/book/nl/Git-op-de-server-Samenvatting.html"
+- "/book/nl/v1/Git-op-de-server-Samenvatting.html"
 ---
 <h2 id="_samenvatting_4">Samenvatting</h2>
 <div class="paragraph">
