--- a/external/book/content/book/nl/v2/Aan-de-slag-Git-klaarmaken-voor-eerste-gebruik.html
+++ b/external/book/content/book/nl/v2/Aan-de-slag-Git-klaarmaken-voor-eerste-gebruik.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Aan-de-slag-Git-installeren
     next: book/nl/v2/Aan-de-slag-Hulp-krijgen
 title: Git - Git klaarmaken voor eerste gebruik
+aliases:
+- "/book/nl/Aan-de-slag-Git-klaarmaken-voor-eerste-gebruik.html"
+- "/book/nl/v1/Aan-de-slag-Git-klaarmaken-voor-eerste-gebruik.html"
 ---
 <h2 id="_first_time">Git klaarmaken voor eerste gebruik</h2>
 <div class="paragraph">
