--- a/external/book/content/book/nl/v2/Bijlage-C:-Git-Commando’s-Setup-en-configuratie.html
+++ b/external/book/content/book/nl/v2/Bijlage-C:-Git-Commando’s-Setup-en-configuratie.html
@@ -17,6 +17,9 @@ book:
     next: book/nl/v2/Bijlage-C:-Git-Commando’s-Projecten-ophalen-en-maken
 title: Git - Setup en configuratie
 url: "/book/nl/v2/Bijlage-C:-Git-Commando’s-Setup-en-configuratie.html"
+aliases:
+- "/book/nl/commands.html"
+- "/book/nl/v1/commands.html"
 ---
 <p>Overal in dit boek hebben we tientallen Git commando’s geïntroduceerd en we hebben ons best gedaan om ze te introduceren met een verhaaltje, en langzaamaan meer commando’s toe te voegen.
 Echter, hiermee zijn we geeindigd met een situatie waarbij de voorbeelden van het gebruik van commando’s nogal versnipperd zijn geraakt over het hele boek.</p><p>In deze appendix zullen we alle Git commando’s die we hebben behandeld in dit boek nogmaals doornemen, grofweg gegroepeerd op het gebruik ervan.
