--- a/external/book/content/book/nl/v2/Git-op-de-server-Je-publieke-SSH-sleutel-genereren.html
+++ b/external/book/content/book/nl/v2/Git-op-de-server-Je-publieke-SSH-sleutel-genereren.html
@@ -16,6 +16,9 @@ book:
     previous: book/nl/v2/Git-op-de-server-Git-op-een-server-krijgen
     next: book/nl/v2/Git-op-de-server-De-server-opzetten
 title: Git - Je publieke SSH sleutel genereren
+aliases:
+- "/book/nl/Git-op-de-server-Je-publieke-SSH-sleutel-genereren.html"
+- "/book/nl/v1/Git-op-de-server-Je-publieke-SSH-sleutel-genereren.html"
 ---
 <h2 id="_generate_ssh_key">Je publieke SSH sleutel genereren</h2>
 <div class="paragraph">
