--- a/external/book/content/book/nl/v2/_index.html
+++ b/external/book/content/book/nl/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/nl/v2.html"
 aliases:
 - "/book/nl/v2/index.html"
+- "/book/nl/v1/index.html"
 - "/book/nl/index.html"
 ---
