book: update tl
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/tl/v2/_index.html
+++ b/external/book/content/book/tl/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/tl/v2.html"
 aliases:
 - "/book/tl/v2/index.html"
+- "/book/tl/v1/index.html"
 - "/book/tl/index.html"
 ---
