book: update pt-pt
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/pt-pt/v2/_index.html
+++ b/external/book/content/book/pt-pt/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/pt-pt/v2.html"
 aliases:
 - "/book/pt-pt/v2/index.html"
+- "/book/pt-pt/v1/index.html"
 - "/book/pt-pt/index.html"
 ---
