book: update uk
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/uk/v2/Вступ-Підсумок.html
+++ b/external/book/content/book/uk/v2/Вступ-Підсумок.html
@@ -14,7 +14,7 @@ book:
     number: 10
     cs_number: '1.10'
     previous: book/uk/v2/Вступ-Отримання-допомоги
-    next: book/uk/v2/Основи-Git-Створення-Git-репозиторія
+    next: book/uk/v2/Основи-Git-Створення-Git-сховища
 title: Git - Підсумок
 url: "/book/uk/v2/Вступ-Підсумок.html"
 ---
