--- a/external/book/content/book/uk/v2/Основи-Git-Запис-змін-до-репозиторія.html
+++ b/external/book/content/book/uk/v2/Основи-Git-Запис-змін-до-репозиторія.html
@@ -13,7 +13,7 @@ book:
     title: Запис змін до репозиторія
     number: 2
     cs_number: '2.2'
-    previous: book/uk/v2/Основи-Git-Створення-Git-репозиторія
+    previous: book/uk/v2/Основи-Git-Створення-Git-сховища
     next: book/uk/v2/Основи-Git-Перегляд-історії-комітів
 title: Git - Запис змін до репозиторія
 url: "/book/uk/v2/Основи-Git-Запис-змін-до-репозиторія.html"
