--- a/external/book/content/book/uk/v2/Основи-Git-Псевдоніми-Git.html
+++ b/external/book/content/book/uk/v2/Основи-Git-Псевдоніми-Git.html
@@ -21,8 +21,8 @@ url: "/book/uk/v2/Основи-Git-Псевдоніми-Git.html"
 <h2 id="_git_aliases">Псевдоніми Git</h2>
 <div class="paragraph">
 <p>
-До того, як завершити розділ про базовий Git, є ще одна маленька підказка, щоб зробити ваше користування Git простішим, легшим та більш знайомим: псевдоніми.
-Ми більше не будемо про них згадувати та будемо вважати, що ви використовуєте їх самостійно в решті книги, проте напевно вам слід знати, як їх використовувати.</p>
+Перед тим, як перейти до наступного розділу, ми хочемо представити особливість, яка може зробити ваше користування Git простішим, легшим та більш знайомим: псевдоніми.
+Для ясності, ми більше не будемо використовувати їх деінде в цій книзі, але якщо ви продовжите працювати з Git регулярно, псевдоніми — це те, про що ви повинні знати.</p>
 </div>
 <div class="paragraph">
 <p>Git сам не намагається здогадатись, яку команду ви набрали, якщо ви набрали її частково.
@@ -39,10 +39,10 @@ $ git config --global alias.st status</code></pre>
 </div>
 <div class="paragraph">
 <p>Це означає, що, наприклад, замість <code>git commit</code> ви можете набрати просто <code>git ci</code>.
-З часом, ви напевно почнете використовувати й інші команди часто. Не вагайтесь створювати нові псевдоніми.</p>
+З часом, ви напевно почнете використовувати частіше й інші команди. Не вагайтесь створювати для них нові псевдоніми.</p>
 </div>
 <div class="paragraph">
-<p>Ця техніка також може бути дуже корисною для створення нових команд, які ви гадаєте мають існувати.
+<p>Ця техніка також може бути дуже корисною для створення нових команд, які на вашу думку, мали б існувати.
 Наприклад, щоб виправити незручність, яку ми бачили при скасуванні змін до файлу, ви можете додати свою власну команду unstage (видалити з індексу) до Git:</p>
 </div>
 <div class="listingblock">
@@ -51,7 +51,7 @@ $ git config --global alias.st status</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>Після цього наступні команди еквівалентні:</p>
+<p>Після цього наступні дві команди еквівалентні:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -78,7 +78,7 @@ commit 66938dae3329c7aebe598c2246a8e6af90d04646
 Author: Josh Goebel &lt;dreamer3@example.com&gt;
 Date:   Tue Aug 26 19:48:51 2008 +0800
 
-    test for current head
+    Test for current head
 
     Signed-off-by: Scott Chacon &lt;schacon@example.com&gt;</code></pre>
 </div>
