404: also be more helpful about non-existing book pages
Just like was just done for non-existing documentation pages, let's be
more helpful for missing book pages, too.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/content/404.html
+++ b/content/404.html
@@ -12,7 +12,7 @@ section: "site"
   </p>
   <script>
     /* Be more helpful for outdated manual versions */
-    const match = window.location.pathname.match(/^(.*\/docs\/([^/]*))\/([0-9.]*)$/)
+    let match = window.location.pathname.match(/^(.*\/docs\/([^/]*))\/([0-9.]*)$/)
     if (match) {
       const [, path, command, version] = match
 
@@ -56,6 +56,16 @@ section: "site"
           path}/${versions[i]}${window.location.search}${window.location.hash
         }">${versions[i]}</a>.`
       })().catch(console.error)
+    }
+
+    match = window.location.pathname.match(/^(.*\/book\/([^/]*))(\/.*)$/)
+    if (match) {
+      const [, path, rest] = match
+
+      const el = document.querySelector('#explanation')
+      el.innerHTML = `This book page was not found. <a href="${
+        path}${window.location.search}${window.location.hash
+      }">The book's front page is here</a>.`
     }
   </script>
 </div>
