404: avoid bogus links to non-existing pages
It is theoretically possible that a Git command no longer exists and
therefore is no longer documented, either, yet there are links out there
pointing to said documentation.

Let's try to be somewhat helpful by detecting that situation and
directing the reader to the top-level documentation page.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/content/404.html
+++ b/content/404.html
@@ -25,6 +25,12 @@ section: "site"
       (async () => {
         // fetch the newest version to obtain the list of versions
         const result = await fetch(url)
+        if (result.status < 200 || result.status >= 300) {
+          el.innerHTML = `The page <code>${command}</code> does not exist in <a href="${
+            path.substring(0, path.length - command.length - 1)
+          }">the documentation</a>.`
+          return
+        }
 
         const div = document.createElement('div')
         div.innerHTML = await result.text()
