--- a/content/404.html
+++ b/content/404.html
@@ -52,7 +52,7 @@ section: "site"
 
         let i = -1
         while (i + 1 < versions.length && versionCompare(version, versions[i + 1]) < 0) i++
-        if (versions[i]) el.innerHTML += `<br />The most closesely matching page describes version <a href="${
+        if (versions[i]) el.innerHTML += `<br />The most closely-matching page describes version <a href="${
           path}/${versions[i]}${window.location.search}${window.location.hash
         }">${versions[i]}</a>.`
       })().catch(console.error)
