Fix typo in bash helper example

--- a/external/book/content/book/en/v2/Git-Tools-Credential-Storage.html
+++ b/external/book/content/book/en/v2/Git-Tools-Credential-Storage.html
@@ -170,7 +170,7 @@ There are several forms it can take:</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Runs <code>/absolute/path/foo -xyz</code></p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>!f() { echo "password=s3cre7"; }; f</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>! if() { echo "password=s3cre7"; };</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Code after <code>!</code> evaluated in shell</p></td>
 </tr>
 </tbody>
